_css/nav-styling.css
.masthead {
  position: relative;
  width: 100%;
  animation: intro 0.3s both;
  animation-delay: 0.15s;
  z-index: 20;
  background-color: #2c4a56;
}

.masthead__inner-wrap {
  clear: both;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  display: flex;
  justify-content: space-between;
  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
}

.masthead__inner-wrap::after {
  clear: both;
  content: "";
  display: table;
}

@media (min-width: 80em) {
  .masthead__inner-wrap {
    max-width: 1280px;
  }
}

.masthead__inner-wrap nav {
  z-index: 10;
}

.masthead__inner-wrap a {
  text-decoration: none;
}

.site-logo img {
  max-height: 2rem;
}

.site-title {
  display: flex;
  align-self: center;
  font-weight: bold;
  z-index: 20;
}

.masthead__menu {
  float: left;
  margin-left: 0;
  margin-right: 0;
  width: 100%;
  clear: both;
}

.masthead__menu .site-nav {
  margin-left: 0;
}

@media (min-width: 37.5em) {
  .masthead__menu .site-nav {
    float: right;
  }
}

.masthead__menu ul {
  clear: both;
  list-style-type: none;
}

.masthead__menu-item {
  display: block;
  list-style-type: none;
  white-space: nowrap;
  padding: 1.8em 0;
}

.masthead__menu-item .active {
    background-color: #5c4a56;
}

.masthead__menu-item:hover {
}

.masthead__menu-item--lg {
  padding-right: 2em;
  font-weight: 700;
}

nav ul {
  margin: 0;
  padding: 0;
}

nav li {
  list-style: none;
}

nav a {
  text-decoration: none;
}

nav ul li,
nav ol li {
  margin-bottom: 0;
}

nav li ul,
nav li ol {
  margin-top: 0;
}

.greedy-nav {
  position: relative;
  display: flex;
  align-items: center;
  min-height: 2em;
  padding: 0 1em 0 1em;
}

.greedy-nav a {
  display: block;
  padding: 0 1rem;
  color: #fff;
  text-decoration: none;
}

@media(max-width: 1280px) {
    .greedy-nav a {
        display: inline;
        margin: 0;
        padding: 0;
    }
}

.greedy-nav__toggle {
  -ms-flex-item-align: center;
  align-self: center;
  height: 2rem;
  border: 0;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.greedy-nav .visible-links {
  display: flex;
  justify-content: flex-end;
  flex: 1;
  overflow: hidden;
  flex-wrap: wrap;
}

.greedy-nav .visible-links a:hover {
  background-color: #1c2a36
}

@media (max-width: 1280px) {
    .greedy-nav .visible-links {
        visibility: hidden;
        width: 0;
        height: 0;
    }
}

.greedy-nav .hamburger {
    width: 50px;
    height: 50px;
    margin-right: 2em;
    max-width: 100%
}

.greedy-nav .hamburger-elem1 {
    width: 100%;
    height: 10%;
    margin: 20% auto;
    display: block;
    background-color: white;
    border-radius: 10px;
}
.greedy-nav .hamburger-elem2 {
    width: 60%;
    height: 10%;
    margin: 20% auto;
    display: block;
    background-color: white;
    border-radius: 10px
}

.visible-hamburger-links {
    width: 100%;
    display: block;
}

.invisible-hamburger-links {
    display: none;
}

@media (min-width: 1280px) {
    .greedy-nav .hamburger {
        visibility: hidden;
        width: 0;
        height: 0;
    }

    .visible-hamburger-links {
        display: none;
    }
}

.greedy-nav .links-wrapper {
    justify-content: flex-end;
    flex-wrap: wrap;
}

.greedy-nav .visible-links li {
  flex: none;
}

.greedy-nav .visible-links a {
  position: relative;
}

.greedy-nav .visible-links a::before {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  height: 4px;
  background: #6f777d;
  width: 100%;
  transition: all 0.2s ease-in-out;
  transform: scaleX(0) translate3d(0, 0, 0);
}

.greedy-nav .hidden-links {
  position: absolute;
  top: 100%;
  right: 0;
  margin-top: 15px;
  padding: 5px;
  border: 1px solid #f2f3f3;
  border-radius: 4px;
  background: #fff;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

.greedy-nav .hidden-links.hidden {
  display: none;
}

.greedy-nav .hidden-links a {
  margin: 0;
  padding: 10px 20px;
  font-size: 1em;
}

.greedy-nav .hidden-links a:hover {
  color: #53595e;
  background: #dbdddf;
}

.greedy-nav .hidden-links::before {
  content: "";
  position: absolute;
  top: -11px;
  right: 10px;
  width: 0;
  border-style: solid;
  border-width: 0 10px 10px;
  border-color: #f2f3f3 transparent;
  display: block;
  z-index: 0;
}

.greedy-nav .hidden-links::after {
  content: "";
  position: absolute;
  top: -10px;
  right: 10px;
  width: 0;
  border-style: solid;
  border-width: 0 10px 10px;
  border-color: #fff transparent;
  display: block;
  z-index: 1;
}

.greedy-nav .hidden-links li {
  display: block;
}

.greedy-nav .hidden-links li:last-child {
  border-bottom: none;
}

.no-js .greedy-nav .visible-links {
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: visible;
}

.nav__list {
  margin-bottom: 1.5em;
}

.nav__list input[type="checkbox"],
.nav__list label {
  display: none;
}

@media (max-width: 63.9375em) {
  .nav__list label {
    position: relative;
    display: inline-block;
    padding: 0.5em 2.5em 0.5em 1em;
    color: #7a8288;
    font-size: 0.75em;
    font-weight: bold;
    border: 1px solid #bdc1c4;
    border-radius: 4px;
    z-index: 20;
    transition: 0.2s ease-out;
    cursor: pointer;
  }

  .nav__list label::before,
  .nav__list label::after {
    content: "";
    position: absolute;
    right: 1em;
    top: 1.25em;
    width: 0.75em;
    height: 0.125em;
    line-height: 1;
    background-color: #7a8288;
    transition: 0.2s ease-out;
  }

  .nav__list label::after {
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
  }

  .nav__list label:hover {
    color: #fff;
    border-color: #7a8288;
    background-color: #333;
  }

  .nav__list label:hover::before,
  .nav__list label:hover::after {
    background-color: #fff;
  }

  .nav__list input:checked + label {
    color: white;
    background-color: #333;
  }

  .nav__list input:checked + label::before,
  .nav__list input:checked + label::after {
    background-color: #fff;
  }

  .nav__list label:hover::after {
    transform: rotate(90deg);
  }

  .nav__list input:checked + label:hover::after {
    transform: rotate(0);
  }

  .nav__list ul {
    margin-bottom: 1em;
  }

  .nav__list a {
    display: block;
    padding: 0.25em 0;
  }
}

@media (max-width: 63.9375em) and (min-width: 64em) {
  .nav__list a {
    padding-top: 0.125em;
    padding-bottom: 0.125em;
  }
}

@media (max-width: 63.9375em) {
  .nav__list a:hover {
    text-decoration: underline;
  }
}

.nav__list .nav__items {
  margin: 0;
  font-size: 1.25rem;
}

.nav__list .nav__items a {
  color: inherit;
}

.nav__list .nav__items .active {
  margin-left: -0.5em;
  padding-left: 0.5em;
  padding-right: 0.5em;
  font-weight: bold;
}

@media (max-width: 63.9375em) {
  .nav__list .nav__items {
    position: relative;
    max-height: 0;
    opacity: 0%;
    overflow: hidden;
    z-index: 10;
    transition: 0.3s ease-in-out;
    transform: translate(0, 10%);
  }
}

@media (max-width: 63.9375em) {
  .nav__list input:checked ~ .nav__items {
    transition: 0.5s ease-in-out;
    max-height: 9999px;
    overflow: visible;
    opacity: 1;
    margin-top: 1em;
    transform: translate(0, 0);
  }
}

.nav__title {
  margin: 0;
  padding: 0.5rem 0.75rem;
  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
  font-size: 1em;
  font-weight: bold;
}

.nav__sub-title {
  display: block;
  margin: 0.5rem 0;
  padding: 0.25rem 0;
  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
  font-size: 0.75em;
  font-weight: bold;
  text-transform: uppercase;
}

.toc {
  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
  color: #7a8288;
  background-color: #fff;
  border: 1px solid #f2f3f3;
  border-radius: 4px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
}

.toc .nav__title {
  color: #fff;
  font-size: 0.75em;
  background: #6f777d;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.navicon {
  position: relative;
  width: 1.5rem;
  height: 0.25rem;
  background: #6f777d;
  margin: auto;
  transition: 0.3s;
}

.navicon::before,
.navicon::after {
  content: "";
  position: absolute;
  left: 0;
  width: 1.5rem;
  height: 0.25rem;
  background: #6f777d;
  transition: 0.3s;
}

.navicon::before {
  top: -0.5rem;
}

.navicon::after {
  bottom: -0.5rem;
}

.close .navicon {
  background: transparent;
}

.close .navicon::before,
.close .navicon::after {
  transform-origin: 50% 50%;
  top: 0;
  width: 1.5rem;
}

.close .navicon::before {
  transform: rotate3d(0, 0, 1, 45deg);
}

.close .navicon::after {
  transform: rotate3d(0, 0, 1, -45deg);
}

.greedy-nav__toggle:hover .navicon,
.greedy-nav__toggle:hover .navicon::before,
.greedy-nav__toggle:hover .navicon::after {
  background: #53595e;
}

.greedy-nav__toggle:hover.close .navicon {
  background: transparent;
}

.site-title {
  display: flex;
  align-self: center;
  font-weight: bold;
  z-index: 20;
}

.greedy-nav a.site-title {
  margin-left: 0;
  padding: 1em 0;
}

.greedy-nav img {
  max-width: 60%
}

.nav-first {
  padding-left: 1em;
  margin-left: 2em;
  border-left-style: solid;
  border-color: white;
  border-width: 2px;
}

.nav-first a {
    color: white;
}

.nav-first li {
    padding: 0.2em 0;
}

.nav-second {
  border-left-style: solid;
  border-color: white;
  padding-left: 1em;
  margin-left: 0.7em;
  border-width: 2px;
}

/* ==================================================================
    SIDE NAV
================================================================== */
@media(max-width: 1280px) {
    .side-nav-wrapper {
        width: 0;
        height: 0;
        visibility: hidden;
    }
}

.side-nav {
    position: sticky;
    top: 0;
    padding: 0 0 0;
}

.side-nav .header {
  text-align: left;
  text-transform: uppercase;
  font-size: 2em;
  overflow: hidden;
  font-weight: bold;
}

.side-nav ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.side-nav li a {
  display: block;
  text-decoration: none;
  color: black;
  padding: 0.1em 0;
  transition: 0.3s;
}

.side-nav li a:hover {
  color: #33A0A6;
  transition: 0.3s;
}

.side-nav .search-bar {
    padding: 2em 0 1em 0;
}

.side-nav .first {
    margin-left: 0.5em;
    padding-left: 0.5em;
    border-left-style: solid;
    border-color: #f1f1f1;
    border-width: 4px;
}

.side-nav .second {
    margin-left: 0.4em;
    padding-left: 0.6em;
    border-left-style: solid;
    border-color: #f1f1f1;
    border-width: 3px;
}

.side-nav .second-invisible {
    display: none;
}


.side-nav .second-action{
    //position: absolute;
    //transform: translateX(-17.5px);
    float: left;
    padding: 2px 4px;

}

.side-nav .second-action:hover {
    color: grey;
}

.active{
    font-weight: bold;
}

.search-input {
    border-radius: 1.5em;
    border: 1px solid grey;
    padding: 0.5em 0.5em 0.5em 2.3em;
    background-color: white;
    background-image: url('/assets/searchicon.png');
    background-position: 8px 7px;
    background-repeat: no-repeat;
    color: black;
    outline: none;
}

.search-input::placeholder {
    color: #151515;
}

input[type=submit] {
    display: none;
}

